# email-ai-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  Нефедов_Алексей_Геннадьевич_защита.pptx  Нефедов_Алексей_Геннадьевич_преддипломная_практика.docx
.github/workflows/: tests.yml
data/: model.joblib  model_metrics.txt  seed_dataset.csv
docs/: architecture.md  compliance.md  features.md  test_plan.md  tz.md  vkr_gap_analysis.md
docs/report_assets/: УММ_ВКР_текст.txt
scripts/: build_archive.py  build_exe.py  export_model.py  generate_assets.py  generate_diagrams.py  generate_formulas.py  generate_presentation.py  generate_report.py  generate_wireframes.py  init_db.py  tune_model.py
src/email_analyzer/: __init__.py  cli.py  config.py
src/email_analyzer/backend/: __init__.py  deps.py  main.py  schemas.py
src/email_analyzer/client/: __init__.py  (+3 more)
tests/: conftest.py  test_analysis_service.py  test_api.py  test_api_stats.py  test_attachment.py  test_classifier.py  test_cli.py  test_client_imports.py  test_csv_json_export.py  test_db_models.py  test_entity_extractor.py  test_functional.py  test_imap_client.py  test_language_detector.py  test_llm_provider.py  test_mail_parser.py  test_mbox_importer.py  test_performance.py  test_priority.py  test_reports.py  test_rules_engine.py  test_security.py  test_semantic_search.py  test_sentiment.py  test_spam_detector.py  test_stats.py  test_summarizer.py  test_validation.py
(+49 files in other folders)
